Remove skeleton from composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "superbition/polyel-skeleton",
+	"name": "superbition/polyel",
 	"type": "project",
 	"description": "Polyel PHP Framework",
 	"minimum-stability": "dev",
