--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
 	"require": {
 	  "php": "^7.4",
 	  "superbition/polyel-framework": "<1.0"
+	},
+	"config": {
+		"preferred-install": "dist"
 	}
 }
